# PDF_Compressed

./: .gitignore  README.md  README_RU.md  main.py  pyproject.toml  requirements.txt
pdfcompressor/: __init__.py  cli.py
pdfcompressor/config/: __init__.py
pdfcompressor/core/: __init__.py  compressor.py  config.py  validator.py
pdfcompressor/services/: __init__.py
pdfcompressor/tests/: __init__.py  test_all.py
pdfcompressor/ui/: __init__.py  components.py  main_window.py
pdfcompressor/utils/: __init__.py  logger.py
